--- a/MastersIdeas/summary.tex
+++ b/MastersIdeas/summary.tex
@@ -17,8 +17,10 @@
             \item Relative velocity model
             \item Stribeck model
         \end{itemize}
-
+    \item Axial forces as function of depth and insertion velocity F = F(x, u)
+        (surface)
     \item Identification using data from analytical models
+    \item Compare ultrasound deformations with graphics
 \end{itemize}
 
 
