--- a/MastersIdeas/summary.tex
+++ b/MastersIdeas/summary.tex
@@ -10,6 +10,8 @@
     \item Friction model using different identification techniques.
     \item Friction model for multilayer soft tissue.
     \item Koopman theory for system identification.
+    \item Check different succesful models on Podders data (e.g. Khadem).
+    \item Retraction force modelling (initial plummet due to friction) 
     \item Comparison of friction models
         \begin{itemize}
             \item LuGre model
