--- a/MastersIdeas/summary.tex
+++ b/MastersIdeas/summary.tex
@@ -23,6 +23,8 @@
         (surface)
     \item Identification using data from analytical models
     \item Compare ultrasound deformations with graphics
+    \item Modelling needle forces during insertion into soft tissue: Gives 
+    Poisson and modulus for both needle and tissue.
 \end{itemize}
 
 
